# Python_App

./: .coveragerc  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  sonar-project.properties  vulnerable_code_examples.py
.github/workflows/: ci.yml  dependabot.yml  main_fastapifn.yml  main_fn.yml
HttpExample/: __init__.py  function.json
app/: api.py  duplicates.py  main.py
tests/: test_basic.py  test_comprehensive.py  test_final_coverage.py  test_main.py  test_main_detailed.py  test_ultra_comprehensive.py
