[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-azure-app"
version = "0.1.0"
description = "FastAPI application for Azure deployment"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastapi>=0.110.3",
    "uvicorn>=0.27.1",
    "httpx>=0.27.2",
    "pytest-cov>=5.0.0"
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^5.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# [build-system]
# requires = ["setuptools>=61.0", "wheel"]
# build-backend = "setuptools.build_meta"

# [project]
# name = "fastapi-azure-app"
# version = "0.1.0"
# description = "FastAPI application for Azure deployment"
# readme = "README.md"
# requires-python = ">=3.8"
# classifiers = [
#     "Programming Language :: Python :: 3",
#     "License :: OSI Approved :: MIT License",
#     "Operating System :: OS Independent",
# ]

# dependencies = [
#     "fastapi>=0.110.3",
#     "uvicorn>=0.27.1",
#     "httpx>=0.27.2",
#     "pytest-cov>=5.0.0"
# ]

# [project.optional-dependencies]
# dev = [
#     "pytest>=7.0",
#     "pytest-cov>=5.0.0",
#     "black",
#     "flake8"
# ]

# [tool.setuptools.packages.find]
# where = ["."]
# include = ["app*"]

# # [tool.poetry]
# # name = "fastapi-azure-app"
# # version = "0.1.0"
# # description = ""
# # authors = ["Your Name <you@example.com>"]

# # [tool.poetry.dependencies]
# # python = "^3.10"
# # fastapi = "^0.110.0"
# # uvicorn = "^0.27.0"

# # [tool.poetry.dev-dependencies]
# # pytest = "^8.0"
# # httpx = "^0.27.0"
# # pytest-cov = "^5.0"
# # codespell = "^2.2"
# # coverage = "^7.4"

# # [build-system]
# # requires = ["poetry-core"]
# # build-backend = "poetry.core.masonry.api"
