[tool.poetry]
name = "fastapi-azure-app"
version = "0.1.0"
description = "FastAPI application for Azure deployment"
#authors = ["Your Name <you@example.com>"]
#readme = "README.md"
license = "MIT"
homepage = ""
repository = ""
documentation = ""
keywords = ["fastapi", "azure", "deployment"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.3"
uvicorn = "^0.27.1"
httpx = "^0.27.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^5.0.0"
black = "^23.0.0"
flake8 = "^6
